added java option, DTO and fixes